<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/menuAddPaymentMethod"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle_rounded">


    <ImageView
        android:id="@+id/imgCrossExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/cross_vector" />

    <TextView
        android:id="@+id/add_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imgCrossExit"
        android:layout_alignBottom="@+id/imgCrossExit"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/inter_bold"
        android:gravity="top"
        android:text="@string/add_payment_method"
        android:textAppearance="@style/add_payment"
        android:textColor="@color/black" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_payment"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/stripe_card"
            android:layout_width="126dp"
            android:layout_height="93dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="31dp"
            android:layout_toStartOf="@+id/square_card"
            android:background="@drawable/frame_175">

            <TextView
                android:id="@+id/stripe_card_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgStripe1"
                android:layout_alignStart="@+id/imgStripe1"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_bold"
                android:gravity="top"
                android:text="@string/stripe"
                android:textAppearance="@style/square" />

            <ImageView
                android:id="@+id/imgStripe1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/stripe_logo_1" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/square_card"
            android:layout_width="126dp"
            android:layout_height="93dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/frame_175">

            <ImageView
                android:id="@+id/imgSquare1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/square_payment_logo" />

            <TextView
                android:id="@+id/square"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgSquare1"
                android:layout_alignStart="@+id/imgSquare1"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_bold"
                android:gravity="top"
                android:text="@string/square"
                android:textAppearance="@style/square" />
            <!--
            Font family: Inter
            Line height: 19sp
            -->


        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_payment_method_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/relativeLayout3"
        android:background="@drawable/frame_143"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/name"
            android:gravity="top"
            />

        <EditText
            android:id="@+id/editTextEnterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_alignStart="@+id/name"
            android:background="@drawable/frame_1"
            android:fontFamily="@font/inter"
            android:layout_marginEnd="20dp"
            android:hint="@string/name"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/txt_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEnterEmailAddress"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="top"
            android:layout_marginTop="10dp"
            android:text="@string/card_number"
            android:textAppearance="@style/name" />

        <TextView
            android:id="@+id/txt_card_MM_YY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEnterCardNumber"
            android:layout_alignStart="@+id/editTextEnterCardNumber"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="top"
            android:text="@string/mm_yy"
            android:textAppearance="@style/name" />

        <TextView
            android:id="@+id/txt_card_CVC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEnterCardNumber"
            android:layout_alignStart="@+id/editTextEnterCVC"

            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="top"
            android:text="@string/cvc"
            android:textAppearance="@style/name" />

        <EditText
            android:id="@+id/editTextEnterCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_card_number"
            android:layout_alignStart="@+id/name"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/frame_1"
            android:textColorHint="@color/hint1"
            android:fontFamily="@font/inter"
            android:hint="@string/card_number"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/editTextEnterMMYY"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_card_MM_YY"
            android:layout_alignStart="@+id/name"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/frame_1"
            android:fontFamily="@font/inter"
            android:textColorHint="@color/hint1"
            android:hint="@string/mm_yy"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/editTextEnterCVC"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_card_MM_YY"
            android:layout_alignEnd="@+id/editTextEnterCardNumber"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/hint1"
            android:background="@drawable/frame_1"
            android:fontFamily="@font/inter"
            android:hint="@string/cvc"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEnterName"
            android:layout_alignStart="@+id/editTextEnterName"
            android:fontFamily="@font/inter_bold"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:text="@string/email"
            android:textAppearance="@style/name" />

        <EditText
            android:id="@+id/editTextEnterEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_email"
            android:layout_alignStart="@+id/text_email"
            android:layout_alignEnd="@+id/editTextEnterName"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/hint1"
            android:autofillHints=""
            android:background="@drawable/frame_1"
            android:fontFamily="@font/inter"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="30dp"
            android:paddingEnd="10dp" />

        <ImageView
            android:id="@+id/emailIconVector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_alignStart="@+id/editTextEnterEmailAddress"
            android:layout_alignTop="@+id/editTextEnterEmailAddress"
            android:layout_alignBottom="@+id/editTextEnterEmailAddress"
            android:foregroundGravity="center"
            android:src="@drawable/vector_email_icon" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_payment_method_info"
        android:layout_alignStart="@+id/layout_payment_method_info"
        android:layout_alignEnd="@+id/layout_payment_method_info"
        android:layout_marginTop="25dp"
        android:textAppearance="@style/request_his"
        android:text="@string/add_payment_method"
        android:fontFamily="@font/inter_bold"
        android:background="@drawable/btn_frame" />





</RelativeLayout>