<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgetPassLink.ActivityRecoverPasswd">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:src="@drawable/mtr_logo_fieldops_for_light_background" />

    <TextView
        android:id="@+id/reset_passw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/reset_passw"
        android:textAppearance="@style/reset_passw"
        android:textSize="24sp" />


    <LinearLayout
        android:id="@+id/frame_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:gravity="top"
            android:paddingStart="2dp"
            android:text="@string/email"
            android:textAppearance="@style/email" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/frame_1">

            <ImageView
                android:id="@+id/emailIconVector"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="8dp"
                android:layout_centerVertical="true"
                android:src="@drawable/vector_email_icon" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/emailIconVector"
                android:background="#00000000"
                android:fontFamily="@font/inter"
                android:layout_marginStart="8dp"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:textColorHint="@color/hint1"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />
        </RelativeLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/btn_reset_passwd_link"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_frame"
        android:fontFamily="@font/inter"
        android:text="@string/reset_password"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000">

        <ProgressBar
            android:id="@+id/resetLinkProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/btn_color"
            android:visibility="gone" />
    </RelativeLayout>





</LinearLayout>